gramps: update to version 3.2.4, dependencies, configuration, use notes.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72815 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gramps/Portfile
+++ b/dports/gnome/gramps/Portfile
@@ -4,8 +4,7 @@
 PortSystem                      1.0
 
 name                            gramps
-version                         3.2.0
-revision                        1
+version                         3.2.4
 categories                      gnome science python genealogy
 platforms                       darwin
 maintainers                     nomaintainer
@@ -15,46 +14,54 @@ description                     GRAMPS is a genealogy program
 long_description                GRAMPS is a genealogy program to store, edit, \
                                 and research genealogical data.  It provides \
                                 advanced capabilities for research, analysis, and \
-                                correlation to potentially fill relationship gaps. \
-                                NOTE 1: Some users have experienced problems importing \
-                                databases from Gramps version 2 or from 3.1.x. It is advised that \
-                                databases are exported from Gramps version 2 in \
-                                Gramps XML format before updating to Gramps version 3. \
-                                The Gramps XML export from version 2 can then be imported \
-                                into gramps 3 if the automatic database upgrade does not \
-                                work. \
-                                NOTE 2: The WriteCD plugin is unavailable. This relies on \
-                                GNOME and has not been made to work on OS X. \
-                                NOTE 3: The spelling checker is not installed because \
-                                there is no port of the python bindings to gtkspell. \
-                                NOTE 4: The Geographic View is not available because \
-                                webkit-gtk does not build under MacPorts (ticket #23464)
+                                correlation to potentially fill relationship gaps.
+
+notes \
+"
+        NOTE 1: Some users have experienced problems importing databases
+                from Gramps version 2 or from 3.1.x. It is advised that
+                databases are exported from Gramps version 2 in Gramps
+                XML format before updating to Gramps version 3.
+                The Gramps XML export from version 2 can then be imported
+                into gramps 3 if the automatic database upgrade does not work.
+
+        NOTE 2: The WriteCD plugin is unavailable. This relies on GNOME and
+                has not yet been made to work on OS X.
+
+        NOTE 3: The Geography View is not available because MacPorts webkit-gtk does
+                not provide geolocation services via GeoClue.
+"
 
 homepage                        http://www.gramps-project.org/
 master_sites                    sourceforge:gramps
 
-checksums                       md5     38f905162c9f3064e46397d9907492f7 \
-                                sha1    f9e334bba254072a86c55cf8e153e3f10bb8cbfb \
-                                rmd160  3d2bc442942e6d7e92589d84a86e9f06745d1a49
+checksums                       md5     b04a078ca9986ff7a3027676df93c30f \
+                                sha1    3ea74cefd9ffc00b050c95460927b8a41b68c9ed \
+                                rmd160  2aa62b9f537893741b14b52f8c85ab9e7b2100d2
 
-configure.args                  --disable-mime-install \
-                                --disable-scrollkeeper
+patchfiles                      patch-configure.diff
+
+configure.args                  --disable-mime-install
 
 configure.python                ${prefix}/bin/python2.6
-configure.env                   GMSGFMT=${prefix}/bin/msgfmt
 
-depends_lib                     bin:update-mime-database:shared-mime-info \
-                                port:py26-gtk \
-                                port:py26-gnome \
-                                port:gtkspell2 \
-                                port:aspell-dict-en \
-                                port:gnome-python26-extras
+depends_build                   port:pkgconfig \
+                                port:intltool \
+                                port:gnome-doc-utils \
+                                port:shared-mime-info
+
+depends_lib                     port:gnome-python26-extras \
+                                port:py26-enchant \
+                                port:aspell-dict-en
+
+#
+# aspell-dict-en is not universal
+#
 
 universal_variant               no
 
 post-activate {
     system "update-mime-database ${prefix}/share/mime"
-    system "scrollkeeper-update"
 }
 
 livecheck.type                  regex
