picocom: maintainer update to 1.6; see #27028
git-svn-id: https://svn.macports.org/repository/macports/trunk@72817 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/comms/picocom/Portfile
+++ b/dports/comms/picocom/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name		picocom
-version		1.4
+version		1.6
 categories	comms
 maintainers	gmail.com:ranauei
 platforms	darwin
@@ -19,10 +19,15 @@ long_description \
 		It could also prove useful in many other similar tasks.
 homepage	http://code.google.com/p/picocom
 master_sites	googlecode
-checksums	md5 08fcc5f6bb9e7676a2569386d5ea9f70 \
-		sha1 dad94531807cd13ab8690d2263d3a680ed4100ba \
-		rmd160 083f1dbebbfaae527366652ef297f641e42947e1
+
+checksums	md5     426c3d30b82cbc80b0dafdccd6020c6c \
+		sha1    f042e15fa76ab3349c74a70062aa210b527e6bdc \
+		rmd160  ac823d8045ab8ae05b19e99b1b3756b61d0e587e
+
+patchfiles	patch-picocom.c.diff patch-term.c.diff
+
 use_configure	no
+
 build.target	""
 build.args      CC=${configure.cc}
 
