p5-test-taint: update to 1.04 and update descriptions; see #27030
git-svn-id: https://svn.macports.org/repository/macports/trunk@72820 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-test-taint/Portfile
+++ b/dports/perl/p5-test-taint/Portfile
@@ -3,12 +3,20 @@
 PortSystem          1.0
 PortGroup           perl5 1.0
 
-perl5.setup         Test-Taint 1.02
+perl5.setup         Test-Taint 1.04
 platforms           darwin
 maintainers         nomaintainer
 
-description         Tools to test taintedness
+description         tools to test taintedness
 
-long_description    ${description}
+long_description    ${name} provides ${description}. \
+                    Tainted data is data that comes from an unsafe source, \
+                    such as the command line, or, in the case of web apps, \
+                    any GET or POST transactions. When you're writing unit \
+                    tests for code that deals with tainted data, you'll want \
+                    to have a way to provide tainted data for your routines \
+                    to handle, and easy ways to check and report on the \
+                    taintedness of your data, in standard Test::More style.
 
-checksums           md5     ffd7c70c4c44e5b8124d8d291a5de802
+checksums           sha1    a0b7f19be31fefb1a475466599903ee1e33f1191 \
+                    rmd160  83b768a0c49430261814c235181f677f9554abdf
