--- a/dports/perl/p5-test-taint/Portfile
+++ b/dports/perl/p5-test-taint/Portfile
@@ -5,7 +5,7 @@ PortGroup           perl5 1.0
 
 perl5.setup         Test-Taint 1.04
 platforms           darwin
-maintainers         nomaintainer
+maintainers         l2g.to:larry+macports
 
 description         tools to test taintedness
 
