rabbitmq-server: update to 2.1.1 and indicate this is noarch; see #27031
git-svn-id: https://svn.macports.org/repository/macports/trunk@72822 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/rabbitmq-server/Portfile
+++ b/dports/net/rabbitmq-server/Portfile
@@ -3,10 +3,12 @@
 
 PortSystem 1.0
 name		rabbitmq-server
-version		2.1.0
+version		2.1.1
 categories	net 
 maintainers	paperplanes.de:meyer rabbitmq.com:tonyg openmaintainer
 platforms	darwin
+supported_archs	noarch
+
 description	The RabbitMQ AMQP Server
 long_description	\
     RabbitMQ is an implementation of AMQP, the emerging standard for \
@@ -17,10 +19,8 @@ long_description	\
 homepage        http://www.rabbitmq.com/
 master_sites    http://www.rabbitmq.com/releases/rabbitmq-server/v${version}/
 
-checksums \
-    md5 53e205032b63d0f70c33e1eb1e26d803 \
-    sha1 8cfff94a4685b645d0d14026b7df8e51ce414bd1 \
-    rmd160 7c447b47774f27c86efb3f8958b12cc7cff20ead
+checksums       sha1 d60bc55f819a56bef00b0bfafd12f707fc985301 \
+                rmd160 41d312dd934d017d492f2d1ccecdc9bd428e8a8a
 
 depends_lib	port:erlang
 depends_build	port:xmlto port:libxslt
