xorg-libsm: Bump to 1.2.0
git-svn-id: https://svn.macports.org/repository/macports/trunk@72823 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xorg-libsm/Portfile
+++ b/dports/x11/xorg-libsm/Portfile
@@ -3,7 +3,7 @@
 PortSystem        1.0
 
 name              xorg-libsm
-version           1.1.1
+version           1.2.0
 categories        x11 devel
 maintainers       gmail.com:mvfranz
 platforms         darwin macosx
@@ -12,14 +12,14 @@ description       X.org libSM
 long_description  X Session Management Library
 
 homepage          http://www.x.org/
-master_sites      ${homepage}pub/individual/lib/
+master_sites      http://xorg.freedesktop.org/archive/individual/lib/
 distname          libSM-${version}
 use_bzip2         yes
 use_parallel_build yes
 
-checksums           md5     6889a455496aaaa65b1fa05fc518d179 \
-                    sha1    dc535af7328dee9a6121b85c3f8041656681a195 \
-                    rmd160  18aba022ccfbe842d025bf66c30a9f56510475f2
+checksums           md5     e78c447bf1790552b644eca81b542742 \
+                    sha1    f78bc72f0b3ec26cbf980f84f014422ba854544d \
+                    rmd160  751e4cbd9e594959212ab47b68ca173628c90d30
 
 depends_build \
 	port:pkgconfig \
@@ -28,7 +28,42 @@ depends_build \
 depends_lib \
 	port:xorg-libice
 
-configure.args --without-libuuid
+configure.args \
+	--without-libuuid \
+	--without-xmlto \
+	--without-fop \
+	--disable-docs \
+	--disable-specs
+
+build.args V=1
+
+# Depending on ghostscript for the PDF documentation creates a dependency
+# loop, so you may want to install first without the docs variant
+variant docs description "Install extra documentation" {
+	depends_build-append \
+		port:fop \
+		port:xmlto
+
+	depends_skip_archcheck-append \
+		fop \
+		xmlto
+
+	configure.args-delete \
+		--without-xmlto \
+		--without-fop \
+		--disable-docs \
+		--disable-specs
+
+	configure.args-append \
+		--with-xmlto \
+		--with-fop \
+		--enable-docs \
+		--enable-specs
+
+	configure.env-append \
+		XMLTO="${prefix}/bin/xmlto" \
+		FOP="${prefix}/bin/fop"
+}
 
 livecheck.type  regex
 livecheck.url   [lindex ${master_sites} 0]?C=M&O=D
