misc Xorg ports: Update master_sites to primary master
git-svn-id: https://svn.macports.org/repository/macports/trunk@72824 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/font-misc-ethiopic/Portfile
+++ b/dports/x11/font-misc-ethiopic/Portfile
@@ -11,7 +11,7 @@ long_description    ${description}
 platforms           darwin
 
 homepage            http://www.x.org/
-master_sites        ${homepage}pub/individual/font/
+master_sites        http://xorg.freedesktop.org/archive/individual/font/
 use_bzip2           yes
 
 checksums           md5     bf9879739a9f06dc1980cf16defaa4d9 \
