--- a/dports/x11/gccmakedep/Portfile
+++ b/dports/x11/gccmakedep/Portfile
@@ -14,7 +14,7 @@ long_description \
 platforms           darwin
 
 homepage            http://www.x.org/
-master_sites        ${homepage}pub/individual/util/
+master_sites        http://xorg.freedesktop.org/archive/individual/util/
 use_bzip2           yes
 
 checksums           md5     b533c0771dbbaf9b041ff35bb941d3a2 \
