--- a/dports/x11/xorg-encodings/Portfile
+++ b/dports/x11/xorg-encodings/Portfile
@@ -12,7 +12,7 @@ long_description    ${description}
 platforms           darwin
 
 homepage            http://www.x.org/
-master_sites        ${homepage}pub/individual/font/
+master_sites        http://xorg.freedesktop.org/archive/individual/font/
 distname            ${my_name}-${version}
 use_bzip2           yes
 
