--- a/dports/x11/makedepend/Portfile
+++ b/dports/x11/makedepend/Portfile
@@ -17,7 +17,7 @@ long_description \
 platforms           darwin
 
 homepage            http://www.x.org/
-master_sites        ${homepage}pub/individual/util/
+master_sites        http://xorg.freedesktop.org/archive/individual/util/
 use_bzip2           yes
 
 checksums           md5     62e58330fe8d1e3e28c7a45779833a48 \
