--- a/dports/x11/xorg-libice/Portfile
+++ b/dports/x11/xorg-libice/Portfile
@@ -12,7 +12,7 @@ description       X.org libice
 long_description  X Inter-Client Exchange Protocol
 
 homepage          http://www.x.org/
-master_sites      ${homepage}pub/individual/lib/
+master_sites      http://xorg.freedesktop.org/archive/individual/lib/
 distname          libICE-${version}
 use_bzip2         yes
 use_parallel_build      yes
