xorg-libsm: Remove --enable/disable-specs since it's not an option in this module
git-svn-id: https://svn.macports.org/repository/macports/trunk@72825 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xorg-libsm/Portfile
+++ b/dports/x11/xorg-libsm/Portfile
@@ -32,8 +32,7 @@ configure.args \
 	--without-libuuid \
 	--without-xmlto \
 	--without-fop \
-	--disable-docs \
-	--disable-specs
+	--disable-docs
 
 build.args V=1
 
@@ -51,14 +50,12 @@ variant docs description "Install extra documentation" {
 	configure.args-delete \
 		--without-xmlto \
 		--without-fop \
-		--disable-docs \
-		--disable-specs
+		--disable-docs
 
 	configure.args-append \
 		--with-xmlto \
 		--with-fop \
-		--enable-docs \
-		--enable-specs
+		--enable-docs
 
 	configure.env-append \
 		XMLTO="${prefix}/bin/xmlto" \
