xorg-libXcomposite: Bump to version 0.4.3
git-svn-id: https://svn.macports.org/repository/macports/trunk@72826 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xorg-libXcomposite/Portfile
+++ b/dports/x11/xorg-libXcomposite/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name            xorg-libXcomposite
-version         0.4.2
+version         0.4.3
 categories      x11 devel
 maintainers     jeremyhu openmaintainer
 description     X.org libXcomposite
@@ -13,9 +13,9 @@ long_description Composite extension
 master_sites     http://xorg.freedesktop.org/archive/individual/lib/
 
 distname    libXcomposite-${version}
-checksums           md5     e38dc98509149083f6c31b49b484e63c \
-                    sha1    d6fade1cb5f9174e702d9e751ddc2b341e946e3a \
-                    rmd160  fdbad9c9e2067553890b114fc384efb8591b9b41
+checksums           md5     a60e0b5c276d0aa9e2d3b982c98f61c8 \
+                    sha1    081b26b556d55e20d7956c80a2ea2854962aecec \
+                    rmd160  dfeb17e6fc7d48e82655c22d9c98ce79be192d76
 
 use_bzip2   yes
 use_parallel_build      yes
@@ -25,6 +25,30 @@ depends_build   port:pkgconfig
 depends_lib     port:xorg-libXfixes \
                 port:xorg-libXext \
                 port:xorg-compositeproto \
+
+configure.args \
+	--without-xmlto
+
+build.args V=1
+
+# Depending on ghostscript for the PDF documentation creates a dependency
+# loop, so you may want to install first without the docs variant
+variant docs description "Install extra documentation" {
+	depends_build-append \
+		port:xmlto
+
+	depends_skip_archcheck-append \
+		xmlto
+
+	configure.args-delete \
+		--without-xmlto
+
+	configure.args-append \
+		--with-xmlto
+
+	configure.env-append \
+		XMLTO="${prefix}/bin/xmlto"
+}
 
 livecheck.type  regex
 livecheck.url   [lindex ${master_sites} 0]?C=M&O=D
