xorg-libXext: Bump to 1.2.0
git-svn-id: https://svn.macports.org/repository/macports/trunk@72828 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xorg-libXext/Portfile
+++ b/dports/x11/xorg-libXext/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name            xorg-libXext
-version         1.1.2
+version         1.2.0
 categories      x11 devel
 maintainers     jeremyhu openmaintainer
 description     X.org libXext
@@ -13,9 +13,9 @@ long_description ${description}
 master_sites    http://xorg.freedesktop.org/archive/individual/lib
 
 distname    libXext-${version}
-checksums           md5     9e51f9cb7e0a38c7099ac1c0de1a1add \
-                    sha1    b48a4e55d21e5ce9dd3356281f32e00b17b4c9f7 \
-                    rmd160  a0793c51d75d795e282e855beed92f7e11ece956
+checksums           md5     9bb236ff0193e9fc1c1fb504dd840331 \
+                    sha1    090d7109c5fffde8a0063e10f22f3e2ec48cf19e \
+                    rmd160  2d84b0f69ef9a84af7114da7bff6bfb559ebb4fc
 use_bzip2   yes
 use_parallel_build      yes
 
@@ -25,6 +25,40 @@ depends_lib     port:xorg-libX11 \
                 port:xorg-xextproto
 
 configure.env-append RAWCPP=${configure.cpp}
+
+configure.args \
+	--without-xmlto \
+	--without-fop \
+	--disable-specs
+
+build.args V=1
+
+# Depending on ghostscript for the PDF documentation creates a dependency
+# loop, so you may want to install first without the docs variant
+variant docs description "Install extra documentation" {
+	depends_build-append \
+		port:fop \
+		port:xmlto \
+		port:xorg-sgml-doctools
+
+	depends_skip_archcheck-append \
+		fop \
+		xmlto
+
+	configure.args-delete \
+		--without-xmlto \
+		--without-fop \
+		--disable-specs
+
+	configure.args-append \
+		--with-xmlto \
+		--with-fop \
+		--enable-specs
+
+	configure.env-append \
+		XMLTO="${prefix}/bin/xmlto" \
+		FOP="${prefix}/bin/fop"
+}
 
 livecheck.type  regex
 livecheck.url   [lindex ${master_sites} 0]?C=M&O=D
