xorg-apps: Add smproxy
git-svn-id: https://svn.macports.org/repository/macports/trunk@72832 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xorg-apps/Portfile
+++ b/dports/x11/xorg-apps/Portfile
@@ -2,7 +2,7 @@
 
 PortSystem 1.0
 name		xorg-apps
-version		20100711
+version		20101027
 categories	x11
 maintainers	jeremyhu openmaintainer
 description	X.org apps meta-package
@@ -33,6 +33,7 @@ depends_run \
     port:sessreg \
     port:setxkbmap \
     port:showfont \
+    port:smproxy \
     port:twm \
     port:viewres \
     port:x11perf \
