Update the error message for a missing Java header to correctly refer to the Apple Developer Connection site as well as deep links to the correct updates. refs #26934
git-svn-id: https://svn.macports.org/repository/macports/trunk@72833 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/cmake/Portfile
+++ b/dports/devel/cmake/Portfile
@@ -41,7 +41,8 @@ post-patch {
 platform darwin {
 	pre-configure {
 		if {![file exists "/System/Library/Frameworks/JavaVM.framework/Headers/jni.h"]} {
-			return -code error "\n********************\n${name} requires the Java for Mac OS X Developer Package from Apple.\nPlease download and install this package from http://developer.apple.com/.\n********************"
+			return -code error "\n********************\n${name} requires the Java for Mac OS X Developer Package from the Apple Developer Connection at http://connect.apple.com.\nFor Mac OS X 10.6: http://adcdownload.apple.com/Java/java_for_mac_os_x_10.6_update_3_developer_package/javadeveloper_10.6_10m3261.dmg\nFor Mac OS X 10.5: 
+http://adcdownload.apple.com/Java/java_for_mac_os_x_10.5_update_8_developer_package/javadeveloper_10.5_9m3263.dmg\n********************"
 		}
 	}
 	post-configure {
