qscintilla: Add debug variant, in QMake style.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72836 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/qscintilla/Portfile
+++ b/dports/devel/qscintilla/Portfile
@@ -42,7 +42,8 @@ checksums           md5     8063f8f933513959432c27c5ffecf56b \
 universal_variant   yes
 
 post-patch {
-    # allow for universal building, if desired
+    # allow for universal building, if desired,
+    # by fixing up the QMake .pro files.
     if {[variant_exists universal] && [variant_isset universal]} {
         # set universal arch types, depending on what the user has specified
         array set macports_to_qt_build_arch {
@@ -78,12 +79,21 @@ configure.cmd       "cd ${worksrcpath}/Qt4; ${qt_qmake_cmd} qscintilla.pro; \
 post-configure {
     # make sure the designer plugin finds the correct Qsci library, by
     # putting its search path first of all -L paths
-    reinplace "/LIBS/s@\-L${prefix}/lib@\-L../Qt4@1" \
-        ${worksrcpath}/designer-Qt4/Makefile
-    # make sure the designer plugin finds the correct Qsci includes, by
-    # putting its search path first of all -I paths
-    reinplace "/INCPATH/s@\-I@\-I../Qt4 \-I@1" \
-        ${worksrcpath}/designer-Qt4/Makefile
+    if {[variant_isset debug]} {
+        reinplace "/LIBS/s@\-L${prefix}/lib@\-L../Qt4@1" \
+            ${worksrcpath}/designer-Qt4/Makefile.Release
+        reinplace "/LIBS/s@\-L${prefix}/lib@\-L../Qt4@1" \
+            ${worksrcpath}/designer-Qt4/Makefile.Debug
+        reinplace "/INCPATH/s@\-I@\-I../Qt4 \-I@1" \
+            ${worksrcpath}/designer-Qt4/Makefile.Release
+        reinplace "/INCPATH/s@\-I@\-I../Qt4 \-I@1" \
+            ${worksrcpath}/designer-Qt4/Makefile.Debug
+    } else {
+        reinplace "/LIBS/s@\-L${prefix}/lib@\-L../Qt4@1" \
+            ${worksrcpath}/designer-Qt4/Makefile
+        reinplace "/INCPATH/s@\-I@\-I../Qt4 \-I@1" \
+            ${worksrcpath}/designer-Qt4/Makefile
+    }
 }
 
 build.cmd           "cd ${worksrcpath}/Qt4; make; cd ${worksrcpath}/designer-Qt4; make; echo"
@@ -102,6 +112,24 @@ post-build {
                 libqscintilla2.5.dylib \
                 ${qt_dir}/lib/libqscintilla2.5.dylib \
                 ${worksrcpath}/designer-Qt4/libqscintillaplugin.dylib"
+    if {[variant_isset debug]} {
+        system "install_name_tool -id \
+                ${qt_dir}/lib/libqscintilla2_debug.5.dylib \
+                ${worksrcpath}/Qt4/libqscintilla2_debug.5.dylib" 
+        system "install_name_tool -id \
+                ${qt_plugins_dir}/designer/libqscintillaplugin_debug.dylib \
+                ${worksrcpath}/designer-Qt4/libqscintillaplugin_debug.dylib" 
+        system "install_name_tool -change \
+                libqscintilla2.5.dylib \
+                ${qt_dir}/lib/libqscintilla2_debug.5.dylib \
+                ${worksrcpath}/designer-Qt4/libqscintillaplugin_debug.dylib"
+    }
+}
+
+variant debug \
+description {Produce both release and debug library and plugin} {
+    # fix up QMake .pro files for +debug, if selected
+    patchfiles-append patch-add_debug.diff
 }
 
 livecheck.type      regex
