lv: +with_xz: use xz instead of xz-devel since xz 5.0.0 is out
git-svn-id: https://svn.macports.org/repository/macports/trunk@72837 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/lv/Portfile
+++ b/dports/textproc/lv/Portfile
@@ -61,7 +61,7 @@ variant lesslikeslash description {Make the behavior of the search command more 
 
 variant with_xz description {Experimental support for XZ Utils} {
     patchfiles-append   xz_support.diff
-    depends_run-append  port:xz-devel
+    depends_run-append  port:xz
 }
 
 livecheck.type  regex
