pspp-devel: update to 0.7.6. tentatively allow parallel build
git-svn-id: https://svn.macports.org/repository/macports/trunk@72838 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/pspp-devel/Portfile
+++ b/dports/math/pspp-devel/Portfile
@@ -4,10 +4,9 @@
 PortSystem          1.0
 
 name                pspp-devel
-set buildstamp      20101016040502
-set buildhash       gc8e5d5
-version             0.7.5
-revision            17
+set buildstamp      20101028040501
+set buildhash       g8dfe93
+version             0.7.6
 categories          math
 license             GPLv3+
 maintainers         snc
@@ -36,8 +35,8 @@ depends_lib		    port:gsl \
                     port:libglade2 \
                     port:libtool
 
-checksums           sha1    7be3736d82c5df017a95dc56d4283ad12765e506 \
-                    rmd160  a79501dd69253122b9132f3185ebf58b6a2c6e51
+checksums           sha1    67f59843739d5f13f98f04460215a841e969b412 \
+                    rmd160  30045bf686a7e3c1560c82b5766dcbf0213e2302
 
 #configure.optflags  -O0
 #configure.cflags-append -g
@@ -50,7 +49,7 @@ configure.args      --disable-rpath \
                     --with-packager-version=${version}-${buildstamp} \
                     --with-packager-bug-reports=${maintainers}
 
-use_parallel_build  no
+use_parallel_build  yes
 
 test.run            yes
 test.target         check
