Don't have a Python 2.5 port depend upon a 2.4 package for building.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72840 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py25-liblzma/Portfile
+++ b/dports/python/py25-liblzma/Portfile
@@ -17,5 +17,5 @@ use_bzip2		yes
 distname		pyliblzma-${version}
 checksums		md5 8e5596bc60e784c74f10e94820655336
 
-depends_build		port:py-setuptools port:liblzma
+depends_build		port:py25-distribute port:liblzma
 patchfiles		patch-liblzma.h pyliblzma-python25.diff
