Add a build depends on py2*-distribute to py2*-anyjson.  Resolves #26981.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72841 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py25-anyjson/Portfile
+++ b/dports/python/py25-anyjson/Portfile
@@ -21,6 +21,8 @@ checksums           md5 626bc3fa2531762b772100b23f4a0925 \
                     sha1 9e0adb75ac2d316c7da4755ef078b4c78fe7abf5 \
                     rmd160 7826be0e8133daf182cfe1c039b879612ce67f29
 
+depends_build-append port:py25-distribute
+
 # Depend upon cjson so that the best JSON module can be used.
 depends_lib-append  port:py25-cjson
 
