--- a/dports/archivers/xz-devel/Portfile
+++ b/dports/archivers/xz-devel/Portfile
@@ -23,7 +23,7 @@ checksums       md5 f2073579b6da2fe35d453adee1aaf1b2 \
 
 depends_lib     port:libiconv port:gettext
 
-conflicts       lzmautils
+conflicts       xz lzmautils
 
 patchfiles      patch-sysctl-darwin.diff
 
