--- a/dports/graphics/cairomm-devel/Portfile
+++ b/dports/graphics/cairomm-devel/Portfile
@@ -6,25 +6,23 @@ PortSystem 1.0
 name            cairomm-devel
 conflicts       cairomm
 set my_name     cairomm
-version         1.9.4
+version         1.9.6
 categories      graphics
 maintainers     devans openmaintainer
 dist_subdir     ${my_name}
 distname        ${my_name}-${version}
 
-description     Cairo is a vector graphics library with cross-device output support.
+description     This library provides a C++ interface to cairo
 long_description \
-                Cairo is designed to produce identical \
-                output on all output media while taking advantage of \
-                display hardware acceleration when available \
-                (eg. through the X Render Extension).
+                ${description} (unstable development branch)
+
 homepage        http://cairographics.org/
 master_sites    ${homepage}releases/
 platforms       darwin
 
-checksums       md5     fc129537e92b77b5e2ec8e84f126213b \
-                sha1    73c6c2a150db0987dd5d344ec2c1d60e3878cbb9 \
-                rmd160  b7d6973b94a55b12f1951775debde36ff022caff
+checksums       md5     f0c0b03142b67d798e781e3f40dea456 \
+                sha1    5d23ed912b23c6e39d6d2aec444a44b90a67d2ba \
+                rmd160  11ccfd02ce54a796f0afa0a8fb878644092cf97a
 
 depends_lib     path:lib/pkgconfig/cairo.pc:cairo-devel \
                 port:libsigcxx2
