gramps: add dependency on py26-webkitgtk, geolocation not required, update notes, take maintainership, thanks to elelay for clarification.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72848 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gramps/Portfile
+++ b/dports/gnome/gramps/Portfile
@@ -5,9 +5,10 @@ PortSystem                      1.0
 
 name                            gramps
 version                         3.2.4
+revision                        1
 categories                      gnome science python genealogy
 platforms                       darwin
-maintainers                     nomaintainer
+maintainers                     devans openmaintainer
 
 description                     GRAMPS is a genealogy program
 
@@ -27,9 +28,6 @@ notes \
 
         NOTE 2: The WriteCD plugin is unavailable. This relies on GNOME and
                 has not yet been made to work on OS X.
-
-        NOTE 3: The Geography View is not available because MacPorts webkit-gtk does
-                not provide geolocation services via GeoClue.
 "
 
 homepage                        http://www.gramps-project.org/
@@ -52,6 +50,7 @@ depends_build                   port:pkgconfig \
 
 depends_lib                     port:gnome-python26-extras \
                                 port:py26-enchant \
+                                port:py26-webkitgtk \
                                 port:aspell-dict-en
 
 #
