py26-pyclutter: fix livecheck.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72849 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-pyclutter/Portfile
+++ b/dports/python/py26-pyclutter/Portfile
@@ -61,4 +61,4 @@ post-destroot {
 
 livecheck.type      regex
 livecheck.url       ${master_sites}
-livecheck.regex     "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
+livecheck.regex     "${my_name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
