--- a/dports/devel/json-glib/Portfile
+++ b/dports/devel/json-glib/Portfile
@@ -27,6 +27,12 @@ checksums           md5     7ce2e2e376165698dc8ea5ea2fc31bea \
 
 configure.args      --enable-introspection=yes
 
+platform darwin 8 {
+        configure.args-delete --enable-introspection=yes
+        configure.args-append --enable-introspection=no
+        depends_lib-delete    port:gobject-introspection
+}
+
 livecheck.type      regex
 livecheck.url       http://ftp.gnome.org/pub/gnome/sources/${name}/${branch}/
 livecheck.regex     {LATEST-IS-(\d+(?:\.\d+)*)}
