botan: disable universal (#22211)
git-svn-id: https://svn.macports.org/repository/macports/trunk@72852 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/security/botan/Portfile
+++ b/dports/security/botan/Portfile
@@ -52,5 +52,7 @@ if {[info exists build_arch] && ${os.platform} == "darwin"} {
     build.args CXX="${configure.cxx}"
 }
 
+universal_variant no
+
 livecheck.regex "(?i)<title>botan (1.8.*)</title>"
 
