* new upstream version (0.99) * website gets redirected from monotone.ca to www.monotone.ca,   so we're using this one right away
git-svn-id: https://svn.macports.org/repository/macports/trunk@72853 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/monotone/Portfile
+++ b/dports/devel/monotone/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name             monotone
-version          0.48
+version          0.99
 categories       devel
 maintainers      tommyd openmaintainer
 description      A distributed version control system
@@ -13,13 +13,13 @@ long_description \
        disconnected operation and an efficient peer-to-peer synchronization \
        protocol. It understands history-sensitive merging, lightweight \
        branches, integrated code review and 3rd party testing.
-homepage         http://monotone.ca/
+homepage         http://www.monotone.ca/
 platforms        darwin
 master_sites     ${homepage}downloads/${version}/
 
-checksums        md5     330a1fe1d92c899d1ad539606f85a9f8 \
-                 sha1    275ed47cb0bc78bc8b40b3ee234ff52d50d0fb64 \
-                 rmd160  233571b3075cf7d21b9db3c74b77d8fb6757c082
+checksums        md5     d9ff611f02b808bb746118ec06c02644 \
+                 sha1    badcf38bf532193124a88463c82a55a1e1f217a9 \
+                 rmd160  cf9c62ebd48a061c481f15d8e74d476e59bc259a
 
 depends_build    port:pkgconfig
 depends_lib      port:zlib \
