libpixman: update to 0.20.0 and don't use a versioned docdir
git-svn-id: https://svn.macports.org/repository/macports/trunk@72854 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/libpixman/Portfile
+++ b/dports/graphics/libpixman/Portfile
@@ -7,7 +7,7 @@ PortGroup               muniversal 1.0
 name                    libpixman
 conflicts               libpixman-devel
 set my_name             pixman
-version                 0.18.4
+version                 0.20.0
 categories              graphics
 platforms               darwin
 maintainers             ryandesign
@@ -25,14 +25,13 @@ long_description        libpixman is a generic library for manipulating pixel \
                         regions. A PixRegion is a set of Y-X banded rectangles \
                         that cover the desired region.
 
-checksums               md5     c1d69aaddba8c1e046d26ac125da95bf \
-                        sha1    011b00fb33d6e5021a680bcc74f600f44d709d8d \
-                        rmd160  c30b9069de50efb622c20e607fbeb11a42d9c45e
+checksums               sha1    2d9e3416f8bcf561a85c381a568d23fd53e0e922 \
+                        rmd160  c74c9358b77d210a6fd45ba1a613b5a70980b00a
 
 configure.args          --disable-gtk
 
 post-destroot {
-    set docdir ${destroot}${prefix}/share/doc/${name}-${version}
+    set docdir ${destroot}${prefix}/share/doc/${name}
     xinstall -d ${docdir}
     eval xinstall -m 644 -W ${worksrcpath} \
         AUTHORS \
