xml-security-c: general cleanup  * use mirrors  * at least two checksums  * more appropriate livecheck  * uncomment license  * don't clobber +universal
git-svn-id: https://svn.macports.org/repository/macports/trunk@72856 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/security/xml-security-c/Portfile
+++ b/dports/security/xml-security-c/Portfile
@@ -7,26 +7,28 @@ name                xml-security-c
 version             1.5.1
 revision            3
 categories          security xml textproc shibboleth
-#license             Apachev2
+license             Apachev2
 maintainers         snc scantor
 description         XML Signing/Encryption for C++
 long_description    The C++ library is an implementation of the XML Digital \
                     Signature specification. It is designed to be easily \
                     ported to new platforms, and has been tested on Solaris, \
                     Linux, FreeBSD, NetBSD and Windows.
-homepage            http://santuario.apache.org/
+homepage            http://santuario.apache.org
 
 platforms           darwin
 depends_lib         port:xercesc3 port:openssl
 
-master_sites        http://santuario.apache.org/dist/c-library
-checksums           sha1 e51d3dca7f32cfcc2090d4d20cf8a1d032d95d79
+master_sites        apache:santuario/c-library/
+
+checksums           sha1    e51d3dca7f32cfcc2090d4d20cf8a1d032d95d79 \
+                    rmd160  eadeb25398d6a0fa6cd22d531470bc1dea1632d3
 
 configure.args      --without-xalan \
                     --with-xerces=${prefix} \
                     --with-openssl=${prefix}
 
-variant universal {
+if {[variant_isset universal]} {
     depends_lib-append  port:libtool
 }
 
@@ -37,5 +39,5 @@ post-configure {
 }
 
 livecheck.type      regex
-livecheck.url       ${master_sites}
-livecheck.regex     ${name}-(\\d+\\.\\d+\\.\\d+)
+livecheck.url       ${homepage}/mirrors.cgi
+livecheck.regex     ${name}-(\\d+(\\.\\d+)+)
