xorg-libXfont: Bump to 1.4.3
git-svn-id: https://svn.macports.org/repository/macports/trunk@72861 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xorg-libXfont/Portfile
+++ b/dports/x11/xorg-libXfont/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name		xorg-libXfont
-version		1.4.2
+version		1.4.3
 categories	x11 devel
 maintainers	jeremyhu openmaintainer
 description	X.org libXfont
@@ -13,9 +13,9 @@ long_description X font handling library for server and utilities
 master_sites	 http://xorg.freedesktop.org/archive/individual/lib/
 
 distname	libXfont-${version}
-checksums           md5     503911759734998f9235b926eed82eb8 \
-                    sha1    79c2089fec014da4b7976e6762f1e9e447fd5767 \
-                    rmd160  5812959009f15b321ebe6cfb9bea9c7abbbef940
+checksums           md5     6fb689cfe13d8d9460f4abb5bd88588d \
+                    sha1    191b40c566f80737cf6838747d86ebaee7b0c7d7 \
+                    rmd160  f1ad5b5f5e6d4c28aaaeedbe46f284408f267705
 use_bzip2	yes
 
 use_parallel_build  yes
@@ -32,10 +32,42 @@ depends_lib \
 	port:xorg-xproto \
 	port:xorg-fontsproto
 
-configure.args --with-bzip2
-
 # Newer libtool add -Wl,-single_module if this isn't set... breaking us
 configure.env LT_MULTI_MODULE=1
+
+configure.args \
+	--with-bzip2 \
+	--without-xmlto \
+	--without-fop \
+	--disable-devel-docs
+
+build.args V=1
+
+# Depending on ghostscript for the PDF documentation creates a dependency
+# loop, so you may want to install first without the docs variant
+variant docs description "Install extra documentation" {
+	depends_build-append \
+		port:fop \
+		port:xmlto
+
+	depends_skip_archcheck-append \
+		fop \
+		xmlto
+
+	configure.args-delete \
+		--without-xmlto \
+		--without-fop \
+		--disable-devel-docs
+
+	configure.args-append \
+		--with-xmlto \
+		--with-fop \
+		--enable-devel-docs
+
+	configure.env-append \
+		XMLTO="${prefix}/bin/xmlto" \
+		FOP="${prefix}/bin/fop"
+}
 
 livecheck.type  regex
 livecheck.url   [lindex ${master_sites} 0]?C=M&O=D
