nodejs: update to 0.2.4; see #27050
git-svn-id: https://svn.macports.org/repository/macports/trunk@72862 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/nodejs/Portfile
+++ b/dports/devel/nodejs/Portfile
@@ -4,7 +4,7 @@
 PortSystem              1.0
 
 name                    nodejs
-version                 0.2.2
+version                 0.2.4
 categories              devel net
 platforms               darwin
 maintainers             gmail.com:ceager openmaintainer
@@ -19,9 +19,8 @@ long_description        Node's goal is to provide an easy way to build scalable 
 homepage                http://nodejs.org/
 master_sites            ${homepage}dist/
 
-checksums               md5     cccdad01d9c7bc2d62190e3146e43396 \
-                        sha1    4b8a734008ed3e9ba10d72c4f8a60ae56395d992 \
-                        rmd160  59ff652d0c484e7cb1a9da40215e47df82deb661
+checksums               sha1    1f7d3211432e2c2669ddcc098f1e7efcee03878a \
+                        rmd160  77eb70a77c66be6285af7fa8283acf15bf7b4ce1
 
 distname                node-v${version}
 
