terminator: add hicolor-icon-theme dependency, fix categories
git-svn-id: https://svn.macports.org/repository/macports/trunk@72864 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/terminator/Portfile
+++ b/dports/sysutils/terminator/Portfile
@@ -6,8 +6,10 @@ PortGroup               python26 1.0
 
 name                    terminator
 version                 0.95
-maintainers             ryandesign openmaintainer
+revision                1
+categories              sysutils
 platforms               darwin
+maintainers             ryandesign openmaintainer
 license                 GPL-2
 supported_archs         noarch
 
@@ -23,7 +25,8 @@ dist_subdir             ${name}
 checksums               sha1    bf764156d6b1f5116a15298b0d69f2cbead060ba \
                         rmd160  6096454c9b27183eff3422d61a01b4a4d2873f61
 
-depends_lib-append      port:vte
+depends_lib-append      port:vte \
+                        port:hicolor-icon-theme
 
 # no suffix since there are not multiple versions of this port
 python.link_binaries_suffix
