qimageblitz:  * update to 0.0.6  * use KDE4-1.1 PortGroup  * take openmaintainership
git-svn-id: https://svn.macports.org/repository/macports/trunk@72871 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/qimageblitz/Portfile
+++ b/dports/graphics/qimageblitz/Portfile
@@ -1,23 +1,22 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; truncate-lines: t; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem          1.0
-PortGroup           kde4    1.0
+PortGroup           kde4 1.1
 
 name                qimageblitz
-version             0.0.5
-revision            4
+version             0.0.6
 categories          graphics kde kde4
-maintainers         nomaintainer
+maintainers         snc openmaintainer
 description         Graphical effects library for KDE4
 long_description    QImageBlitz is a graphical effect and filter library \
                     for KDE4 with MMX/SSE support.
 homepage            http://www.kde.org
+
 platforms           darwin
-master_sites        http://www.kde.org
-distname            ${version}
 
-fetch.type          svn 
-svn.url             svn://anonsvn.kde.org/home/kde/tags/${name}/${version}
-
-configure.args-append      ../${distname}
+master_sites        kde:stable/${name}/
+use_bzip2           yes
+checksums           sha1    32bcda9adb262ef49c62e3a7adbfcdeec98f72e4 \
+                    rmd160  5720d4e18dd7fdcd532e6dc9a2d2fe06116e7fef
 
