phonon: add missing dependency on glib2, #27041
git-svn-id: https://svn.macports.org/repository/macports/trunk@72872 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/phonon/Portfile
+++ b/dports/audio/phonon/Portfile
@@ -23,6 +23,8 @@ checksums           md5 d9eab28383783261254f1cef3b92a3fa \
                     sha1 c329d924fb75a89a9de8a4d799ff4dcd7ee3302e \
                     rmd160 aa37903f166904dd09401541df8fc268a2858606
 
+depends_lib-append    path:lib/pkgconfig/glib-2.0.pc:glib2
+
 livecheck.type		regex
 livecheck.url		http://ftp.gtlib.cc.gatech.edu/pub/kde/stable/${name}/
 livecheck.regex		"\(\\d+(?:\\.\\d+)*)\/"
