soundtouch: update livecheck url.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72876 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/soundtouch/Portfile
+++ b/dports/audio/soundtouch/Portfile
@@ -34,6 +34,5 @@ pre-configure {
 }
 
 livecheck.type  regex
-livecheck.url   ${master_sites}
+livecheck.url   ${homepage}/sourcecode.html
 livecheck.regex "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
-
