djview: No longer needs "-arch*-arch" qmake work-around. Will build as universal.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72877 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/djview/Portfile
+++ b/dports/aqua/djview/Portfile
@@ -35,13 +35,11 @@ configure.args \
     --disable-desktopfiles \
     QMAKESPEC=${qt_mkspecs_dir}/macx-g++
 
-universal_variant no
+universal_variant yes
 
-post-configure {
-    # fix issue with qmake adding an extra -arch sometimes
-    reinplace "s|-arch ${build_arch} -arch|-arch ${build_arch}|" \
-        ${worksrcpath}/src/Makefile
-}
+# QMake does not handle this flag.
+configure.universal_args-delete --disable-dependency-tracking
+configure.args-delete  --disable-dependency-tracking
 
 destroot {
     xinstall -m 755 -d ${destroot}${applications_dir}
