--- a/dports/net/nss/Portfile
+++ b/dports/net/nss/Portfile
@@ -97,3 +97,8 @@ destroot {
 	reinplace "s,@NSPR_VERSION@,${nspr_version},g"  ${destroot}${prefix}/lib/pkgconfig/nss.pc
 	reinplace "s,@NSS_VERSION@,${nss_version},g" ${destroot}${prefix}/lib/pkgconfig/nss.pc
 }
+
+livecheck.type    regex
+livecheck.url     http://ftp.mozilla.org/pub/mozilla.org/security/nss/releases/
+livecheck.version "${NSS_VMAJOR}_${NSS_VMINOR}_${NSS_VPATCH}"
+livecheck.regex   {(\d+_\d+(?:_\d+)*)}
