mesa: update livecheck.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72881 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/mesa/Portfile
+++ b/dports/x11/mesa/Portfile
@@ -150,4 +150,6 @@ platform darwin 8 {
     }
 }
 
-livecheck.name  Mesa
+livecheck.type  regex
+livecheck.url   http://www.buraphalinux.org/download/bls1.4/dvd_source/source/x11/xserver/mesa/
+livecheck.regex "MesaLib-(\\d+\\.\[02468\](?:\\.\\d+)*)${extract.suffix}"
